<resources>
    <string name="app_name">Indiecore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet">Your mobile is not connected to the internet. Please connect to an active internet connection.</string>
    <string name="invalid_session">Invalid Session</string>
    <string name="logout_device">Your session has been expired, Please login again to continue.</string>
    <string name="please_wait">Please wait...</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="no_result_found">No result found for this business Name</string>
    <string name="create_post_activity">Create Post</string>
    <string name="internal_storage">Internal storage</string>
    <string name="premium_badges">In-App purchase</string>
    <string name="about_premium_badges">Did you run short of slots?.Purchase 10 Slots for £0,69 and add more badges to your profile.</string>
    <string name="comment_activity">Comment Activity</string>
    <string name="comment_reply_activity">Comment Reply Activity</string>
    <string name="get_started">Get Started Now</string>
    <string name="Real_Check_Ins">Real check-ins for real people</string>
    <string name="Create_chat_rooms_at_a">Create chat rooms at places nearby and find people</string>
    <string name="Create_chat_rooms_at_b">with similar experiences and interests</string>
    <string name="enter_mobile_number_a">Please confirm your country code and enter</string>
    <string name="enter_mobile_number_b">your phone number</string>
    <string name="contact_number">Contact Number</string>
    <string name="next">Next</string>
    <string name="concurrent_verification_message">Concurrent verifications to the same number are not allowed</string>
    <string name="some_unknown_error">Some unknown error occurred, Please try again later.</string>
    <string name="Sit_back_and_relax_a">Sit back and relax! while we verify your </string>
    <string name="Sit_back_and_relax_b">mobile number </string>
    <string name="please_enter_your_verification_code_below">Please enter your verification code below </string>
    <string name="did_not_receive_code">Didn\'t receive verification code?</string>
    <string name="resend_verification_code"><u>Resend verification code</u></string>
    <string name="it_is_recommended_to_choose_a">It is recommended to choose badges </string>
    <string name="it_is_recommended_to_choose_b">to connect quicker and see who is </string>
    <string name="it_is_recommended_to_choose_c">using Indiecore </string>
    <string name="contacts_sync">Sync Contacts</string>
    <string name="contact_sync_successful">Contacts Sync successful</string>
    <string name="contact_sync_failure">Error in contact syncing</string>
    <string name="no_contact_to_sync">No Contacts to Sync</string>
    <string name="badges">Badges</string>
    <string name="previous">Previous</string>
    <string name="its_recommended">It is recommended to choose badges and engage with people based on mutual choices</string>
    <string name="no_more_badges">No more badges available</string>
    <string name="create_profile">Create Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="description">Description</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_description">Description(240 character max)</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallary">Choose From Gallary</string>
    <string name="upload_image">Upload Image</string>
    <string name="cancel">Cancel</string>
    <string name="Badge_name">Badge Name</string>
    <string name="Badge_detail_activity">Badge Detail Activity</string>
    <string name="not_more_then_ten_badge">You can select a maximum of 10 badges for free, to get more please invite friends or purchase</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="no_thanks">No,Thanks</string>
    <string name="invite_atleast_ten_friend">You need to invite at least 10 people to get more badges</string>
    <string name="not_more_than_ten_sms">You cannot send more than 10 SMS at any one time when inviting friends</string>
    <string name="at_least_one_contact">You need to select at-least one contact(s) to send invitation</string>
    <string name="invite_message">Hello, I\'m using Indiecore, please download and see what you\'re missing:www.google-playstore/indiecore</string>
    <string name="my_badges">Badges</string>
    <string name="my_badge">My Badges</string>
    <string name="badge_market">Badges Market</string>
    <string name="select_a_badge">Please select at-least one badge(s)</string>
    <string name="trending">Trending</string>
    <string name="near_by">Nearby</string>
    <string name="find">Find</string>
    <string name="add_comment">Add comment</string>
    <string name="upload">Upload</string>
    <string name="write_reply">Write reply</string>
    <string name="comment_text_validation_message">Please do write a comment to post</string>
    <string name="chat">Chat</string>
    <string name="board">Board</string>
    <string name="people">People</string>
    <string name="board_activity">Board Activity</string>
    <string name="friends">Friends</string>
    <string name="others">Others</string>
    <string name="view_media_activity">View Media Activity</string>
    <string name="news_feed_activity">News Feed Activity</string>
    <string name="phonebook">Phonebook</string>
    <string name="favourite">Favourite</string>
    <string name="no_contacts_one">No contacts on indiecore</string>
    <string name="no_contacts_two">Try syncing contacts in setting tab</string>
    <string name="no_favourite_one">No user set as favourite</string>
    <string name="no_favourite_two">You can set user favourite while viewing his profile.</string>
    <string name="about">About</string>
    <string name="telephone">Telephone</string>
    <string name="opening_hours">Opening hours</string>
    <string name="website">Website</string>
    <string name="available">Available</string>
    <string name="add_post">Please write a post or upload an image</string>
    <string name="write_a_msg">Write a message</string>
    <string name="media_not_available">This media file is not available in your system</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cover_pic">Cover Pic</string>
    <string name="name">Name</string>
    <string name="by_sms">By Sms</string>
    <string name="by_whats_app">By WhatsApp</string>
    <string name="message_by_friends">Message From Friends</string>
    <string name="message_from_others">Message From Others</string>
    <string name="chat_messages">Chats Messages</string>
    <string name="new_badges">New Badges</string>
    <string name="privacy">Privacy</string>
    <string name="notifiation">Notification</string>
    <string name="clear_chats">Clear Chats</string>
    <string name="my_post">Posts</string>
    <string name="my_profile">My Profile</string>
    <string name="user_profile">User Profile activity</string>
    <string name="no_post_available">No post available</string>
    <string name="reccomend_badge">Recommend a Badge</string>
    <string name="dummy_txt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="enter_badge_title">Enter a Badge Title Below </string>
    <string name="max_50_character">Max 50 Characters</string>
    <string name="empty_badge_name">Please enter a badge name</string>
    <string name="base_64_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAgV7olLwFUm5FN5pYAqlZr5DY4RhlMgQQBw8QfmODWV3fNO0JQ3kw2ZU4pbVaUCLuklkmRmC2qGxwWeJqa1yUHYUwKBX6QgswwbZTnAX02nZGhuuWkC2M559A/Bm6buyaHMcPoDceejvcNrKLvIn3WHht+VMiyTIqaeDty4auyTAbql584jlGI3HEmhwjYByOI5VVVW23f3Qrq6aOcuvhHYX9ImB/ljHjdeMziMGvYK4UMN6t/ZXXPY8HmQBiBj3Svfjvw4qN7czwm/4QbAk3UoDXA7oS2ceqKEPgDF149DX6vpTOTpI+UK73dB2i5l3I7QImQNnivMFwnJoME+QH1wIDAQAB</string>
    <string name="subscription_period_prompt">Select your subscription period</string>
    <string name="subscription_resignup_prompt">To reactivate your subscription, select your subscription period</string>
    <string name="subscription_update_prompt">To change your subscription, select your new subscription period</string>
    <string name="subscription_period_monthly">Monthly</string>
    <string name="subscription_period_yearly">Yearly</string>
    <string name="subscription_prompt_continue">Continue</string>
    <string name="subscription_prompt_cancel">Cancel</string>
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="content_description_title_image">80\'s Video Game Style Car Logo</string>
    <string name="content_desc_gas_gauge_indicator">Gas gauge indicator</string>
    <string name="content_desc_free_vs_premium_indicator">Free or Premium Image Indicator</string>
</resources>