<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@mipmap/ic_launcher"
        android:layout_gravity="center"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        android:text="@string/Sit_back_and_relax_a"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:text="@string/Sit_back_and_relax_b"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:text="@string/please_enter_your_verification_code_below"/>


<EditText
    android:id="@+id/et_verification_code"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:hint="Verification Code"
    android:gravity="center"
    android:padding="10dp"
    android:background="@drawable/edit_text_style"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="Submit"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="15dp"/>

</LinearLayout>