<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        class="com.google.android.gms.maps.SupportMapFragment" />
    <LinearLayout
        android:id="@+id/ll_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_with_icon"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/simple_border_line_style"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_trending"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/blue_clicked"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="4dp"
            android:text="@string/trending"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_nearby"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="4dp"
            android:text="@string/near_by"
            android:textColor="@color/blue_clicked"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tv_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="4dp"
            android:text="@string/find"
            android:textColor="@color/blue_clicked"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>